--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
 	<div id="app">
 	</div>
+
+	<script src="https://www.gstatic.com/firebasejs/3.7.2/firebase.js"></script>
 	<script src="public/app.js"></script>
 </body>
 </html>
